# url_shortener_service

./: Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
deployment/: docker-compose.yaml
deployment/backend/: Dockerfile
migrations/2022-12-11-112911_url_tokens/: down.sql  up.sql
src/: db_module.rs  main.rs  models.rs  schema.rs  shortener_service.rs  utils.rs  web_ui.rs
