[package]
name = "url_shorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.149", features = ["derive"] }
actix-files = "0.6.2"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
rand = "0.8.5"